--- a/vtr-ui/src/app/components/widgets/widget-hardware-scan-item/widget-hardware-scan-item.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-hardware-scan-item/widget-hardware-scan-item.component.scss
@@ -1,7 +1,7 @@
 @import "../../../app.theme";
 
 .vtr-widget-hardware-scan-item {
-	padding: 0 1.5rem;
+	padding: 0 2.4rem;
 
 	.module-information {
 		width: 100%;
@@ -165,6 +165,10 @@
 
 	.not-wrap {
 		flex-wrap: nowrap;
+	}
+
+	.collapse-item {
+		padding-right: 0;
 	}
 
 	p {
